# doto-list

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  doto-installer.ps1  install.sh
.github/workflows/: release.yml
src/: app.rs  colors.rs  doto.rs  event.rs  main.rs  ui.rs
